# formate

./: .bumpversion.cfg  .imgbotconfig  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  demo.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml  safety.yml
doc-source/: Source.rst  _blurb.rst  ch_head_space.py  changelog.rst  conf.py  configuration.rst  contributing.rst  extending.rst  hooks.rst  index.rst  latex_zwsp.py  license.rst  local_extension.py  requirements.txt  usage.rst
doc-source/_static/: style.css
doc-source/_templates/: base.html
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: classes.rst  config.rst  dynamic_quotes.rst  ellipses.rst  exceptions.rst  formate.rst  imports.rst  mini_hooks.rst  reformat_generics.rst  utils.rst
formate/: __init__.py  __main__.py  classes.py  config.py  dynamic_quotes.py  ellipses.py  exceptions.py  imports.py  mini_hooks.py  reformat_generics.py  utils.py
tests/: example_pyproject.toml  requirements.txt  test_classes.py  test_cli.py  test_click_version.py  test_config.py  test_dynamic_quotes.py  test_ellipses.py  test_entry_points.py  test_imports.py  test_integration.py  test_isort.py  test_mini_hooks.py  test_reformat_generics.py  test_utils.py  test_yapf_nested_fixups.py
tests/test_cli_/: test_help.txt  test_help_7_.txt
tests/test_entry_points_/: test_entry_points_file.yml
tests/test_imports_/: test_CollectionsABCRewriter_in_class_spaces_._py  test_CollectionsABCRewriter_in_class_tabs_._py  test_CollectionsABCRewriter_in_function_another_import_._py  test_CollectionsABCRewriter_in_function_spaces_._py  test_CollectionsABCRewriter_in_function_tabs_._py  test_CollectionsABCRewriter_top_level_._py  test_rewrite_collections_abc_imports_in_function_another_import_._py  test_rewrite_collections_abc_imports_multiple_imports_spaced_out_._py  test_rewrite_collections_abc_imports_multiple_mixed_imports_spaced_out_._py  test_rewrite_collections_abc_imports_top_level_code_before_._py  test_rewrite_collections_abc_imports_top_level_relative_._py
tests/test_integration_/: test_cli.yml  test_cli_no_config.yml  test_cli_no_config_click8.yml  test_cli_syntax_error.yml  test_cli_syntax_error_py310.yml  test_cli_syntax_error_pypy.yml  test_cli_verbose_verbose._py_  test_cli_verbose_verbose.yml  test_cli_verbose_verbose_no_supported_hooks.yml  test_cli_verbose_verbose_unicode_error.yml  test_integration.yml  test_integration_pyproject._py_  test_integration_pyproject.yml
tests/test_isort_/: test_isort_stubs.txt
tests/test_mini_hooks_/: test_newline_after_equals.txt  test_squish_stubs._py_
tests/test_reformat_generics_/: test_generics_Complex_Alias_1_._py  test_generics_Complex_Optional_._py  test_generics_Literal_._py  test_generics_Long_Tuple_._py  test_generics_Multiline_1a_._py  test_generics_Multiline_2_._py  test_generics_Simple_Mapping1_._py  test_generics_Simple_Tuple_._py  test_generics_Simple_Union_._py  test_generics_Union_in_class_._py  test_generics_functions._py  test_generics_indented_2_Complex_Alias_2_._py  test_generics_indented_2_Literal_._py  test_generics_indented_2_Literal_True_None_String_._py  test_generics_indented_2_Literal_in_class_._py  test_generics_indented_2_Long_Tuple_._py  test_generics_indented_2_Multiline_1_._py  test_generics_indented_2_Multiline_2_._py  test_generics_indented_2_Union_in_class_._py  test_generics_indented_4_Literal_._py  test_generics_indented_4_Literal_True_None_String_._py  test_generics_indented_4_Literal_in_class_._py  test_generics_indented_4_Long_Tuple_._py  test_generics_indented_4_Multiline_1_._py  test_generics_indented_4_Multiline_2_._py  test_generics_indented_4_Union_in_class_._py  test_generics_indented_tab_Literal_True_None_String_._py  test_generics_indented_tab_Literal_in_class_._py
tests/test_utils_/: test_syntaxerror_for_file_f_string_3_10_.yml  test_syntaxerror_for_file_f_string_3_12_.yml  test_syntaxerror_for_file_f_string_3_7_.yml  test_syntaxerror_for_file_f_string_pypy3_7_.yml
tests/test_yapf_nested_fixups_/: test_nested_array.txt  test_nested_call.txt
