# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[metadata]
name = formate
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = MIT License
keywords = formatting
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Windows, macOS, Linux
url = https://github.com/repo-helper/formate
project_urls =
    Documentation = https://formate.readthedocs.io/en/latest
    Issue Tracker = https://github.com/repo-helper/formate/issues
    Source Code = https://github.com/repo-helper/formate
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6.1
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    doc-source
    tests
    tests.*

[mypy]
python_version = 3.6
namespace_packages = True
check_untyped_defs = True
warn_unused_ignores = True

[options.entry_points]
formate_hooks =
    reformat-generics=formate.reformat_generics:reformat_generics
    dynamic_quotes=formate.dynamic_quotes:dynamic_quotes
    noqa_reformat=formate.mini_hooks:noqa_reformat
    ellipsis_reformat=formate.mini_hooks:ellipsis_reformat
    collections-import-rewrite=formate.imports:rewrite_collections_abc_imports
    isort=formate:isort_hook
    yapf=formate:yapf_hook
