# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[mypy]
python_version = 3.6
namespace_packages = True
check_untyped_defs = True
warn_unused_ignores = True
plugins = attr_utils.mypy_plugin
incremental = False

[options.entry_points]
console_scripts = formate=formate.__main__:main
formate_hooks =
    reformat-generics=formate.reformat_generics:reformat_generics
    dynamic_quotes=formate.dynamic_quotes:dynamic_quotes
    noqa_reformat=formate.mini_hooks:noqa_reformat
    squish_stubs=formate.mini_hooks:squish_stubs
    ellipsis_reformat=formate.ellipses:ellipsis_reformat
    collections-import-rewrite=formate.imports:rewrite_collections_abc_imports
    isort=formate:isort_hook
    yapf=formate:yapf_hook
